# donkey-shot

./: .gitignore  CMakeLists.txt  CREDITS  main.cpp
cmake/: FIndSDL2_ttf.cmake
include/: AnimatedEntity.h  Collider.h  DataStructures.h  Entity.h  Finish.h  Game.h  InfoWindow.h  Kong.h  LevelReader.h  Player.h  StaticEntities.h  TextureManager.h  Window.h  WindowManager.h
levels/: 1.level  2.level  3.level
src/: DataStructures.cpp  Entity.cpp  Finish.cpp  Game.cpp  InfoWindow.cpp  Kong.cpp  LevelReader.cpp  Player.cpp  StaticEntities.cpp  TextureManager.cpp  Window.cpp  WindowManager.cpp
